--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>zdyy</title>
   </head>
   <body>
+    <script src="http://webapi.amap.com/maps?v=1.4.2&key=bec7f30955eb804b54a23d8e37b6dd0d"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
